--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -8,7 +8,7 @@
     <!-- Navigation header hook -->
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
-        <div class="flex items-center h-16 p-6" style="background-color: #207937;">
+        <div class="flex items-center h-16 p-6 bg-white mb-4">
             <!-- Light version -->
             <img
                 class="dark:hidden w-36"
