--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -1,7 +1,7 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Utilization List</div>
+  <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Utilization List</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
     [formGroup]="loanutilizationSearch">
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
       <div class="col-md-2 kt-margin-bottom-10-mobile" *ngIf="!isUserAdmin && isMCO && !isBM">
@@ -103,7 +103,7 @@
   </div>
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-hidden">
+  <div class="flex flex-auto overflow-scroll mx-12">
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
