Land Creation First Main component

--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -224,7 +224,7 @@
                     *ngIf="!isFormReadonly">Clear
             </button>
         </div>
-        <div class="example-table-container">
+        <div class="example-table-container" *ngIf="ShowTable">
             <table class="table table-striped">
                 <tr class="table-header-background">
                     <th></th>
