--- a/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
+++ b/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
@@ -4,10 +4,6 @@
     <!-- Header -->
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
          style="flex-wrap: wrap" [formGroup]="rcSearch">
-        <div
-            class="absolute inset-x-0 bottom-0">
-            <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
-        </div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
@@ -37,7 +33,6 @@
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                 <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                            (selectionChange)="changeBranch($event)"
                             *ngIf="!single_branch">
                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
                     >
@@ -115,7 +110,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Gl description<th>
                     <td mat-cell *matCellDef="let row">{{row.glDescription}}<td>
                   </ng-container>
-          
+
                   <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Status<th>
                     <td mat-cell *matCellDef="let row">{{row.status}}<td>
@@ -128,13 +123,13 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Old Due Date<th>
                     <td mat-cell *matCellDef="let row">{{row.oldDate}}<td>
                   </ng-container>
-          
+
                   <ng-container matColumnDef="AcStatus">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>A/C Status<th>
                     <td mat-cell *matCellDef="let row">{{row.acStatus}}<td>
                   </ng-container>
 
-                
+
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -152,7 +147,7 @@
                 <button (click)="paginate(1)">First</button>
                 <pagination-controls display="inline" (pageChange)="paginate($event)"
                                      style="display: inline-block;"></pagination-controls>
-                <button (click)="paginate(MathCeil(totalItems/itemsPerPage))">Last</button>
+                <button (click)="paginate(Math.Ceil(totalItems/itemsPerPage))">Last</button>
                 <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
             </div>
