--- a/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
+++ b/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="configurationForm" class="kt-form kt-form--group-seperator-dashed">
+<form [formGroup]="configurationForm" class="kt-form kt-form--group-seperator-dashed" style="width: 836px;">
     <div>
         <mat-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true"
                    (close)="onAlertClose($event)">
@@ -6,8 +6,8 @@
         </mat-alert>
 
         <div class="form-group kt-form__group row">
-            <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <input matInput placeholder="Enter key name" formControlName="KeyName" maxlength="30"
                            autocomplete="off"/>
                     <mat-error *ngIf="hasError('KeyName', 'required')">Key Name <strong>required</strong>
@@ -16,10 +16,10 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                <mat-form-field class="example-full-width" appearance="outline">
+            <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                <mat-form-field class="example-full-width w-full" appearance="outline">
                     <mat-label>Key Value</mat-label>
-                    <input matInput maxlength="100000" placeholder="Key Value"
+                    <input class="w-full" matInput maxlength="100000" placeholder="Key Value"
                            formControlName="KeyValue">
                     <mat-error *ngIf="hasError('KeyValue', 'required')">Key Value is required</mat-error>
                     <mat-hint align="left">{{Inputhint}}</mat-hint>
@@ -32,14 +32,18 @@
                 </mat-form-field>
 
             </div>
+        </div>
+        <div class="row py-4">
             <div class="col-lg-4 kt-margin-bottom-20-mobile">
                 <mat-checkbox matInput formControlName="IsParent" (change)="changedParentStatus()">
                     isParent?
                 </mat-checkbox>
             </div>
-            <div class="col-lg-4 kt-margin-bottom-20-mobile" *ngIf="!configurationForm.value.IsParent"
+        </div>
+        <div class="row pb-4">
+            <div class="col-lg-6 kt-margin-bottom-20-mobile" *ngIf="!configurationForm.value.IsParent"
                  style="margin-top: 2%">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label>Select Parent</mat-label>
                     <mat-select formControlName="ParentID">
                         <mat-option *ngFor="let single_parent of parents"
@@ -51,7 +55,7 @@
 
 
         <div>
-            <div class="kt-form__actions kt-form__actions--solid">
+            <div class="kt-form__actions kt-form__actions--solid  py-4 border-t">
                 <div class="row text-right">
                     <div class="col-lg-12">
                         <button type="button" class="button-red" mat-raised-button
