--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -1,8 +1,8 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div class="absolute inset-0 bg-white flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
 
     <!-- Header -->
     <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
+        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10  dark:bg-transparent">
         <div class="flex-1 min-w-0">
 
             <!-- Title -->
@@ -23,12 +23,12 @@
     </div>
 
     <!-- Main -->
-    <div class="flex-auto">
+    <div class="flex-auto mx-10 shadow rounded p-5">
 
         <!-- CONTENT GOES HERE -->
         <!-- CONTENT GOES HERE -->
         <div class="form-group row">
-            <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  mat-elevation-z8"
+            <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile"
                  id="custom-table-activity-list">
                 <div class="custom-accordion" *ngFor="let parent_configuration of configurations;let i=index">
                     <div v class="custom-accordion-head" (click)="toggleAccordion(i)"
