--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
         <!-- Loader -->
         <!-- Title -->
         <div class="text-4xl font-extrabold tracking-tight">Pages List</div>
@@ -23,7 +23,7 @@
     <div class="">
 
         <!-- CONTENT GOES HERE -->
-        <div class="pt-1">
+        <div class="pt-1 mx-10 rounded p-2 shadow">
             <div class="form-group row" style=" 
             min-width: max-content;
             max-height: 50vh;
