--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -23,7 +23,13 @@
     </div>
 
     <!-- Main -->
-    <div class="flex-auto mx-10 shadow rounded p-5">
+    <div class="flex-auto mx-10 shadow-lg rounded p-5 bg-gray-50" 
+    style=" 
+            min-width: max-content;
+            max-height: 70vh;
+            overflow-y:scroll;
+            "
+    >
 
         <!-- CONTENT GOES HERE -->
         <!-- CONTENT GOES HERE -->
