--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,14 @@
 /*  @ Import/write your custom styles here.
 /*  @ Styles from this file will override 'vendors.scss' and Fuse's base styles.
 /* ----------------------------------------------------------------------------------------------------- */
+
 body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-primary, body.light .mat-fab.mat-primary, body.light .mat-mini-fab.mat-primary, body .light .mat-flat-button.mat-primary, body .light .mat-raised-button.mat-primary, body .light .mat-fab.mat-primary, body .light .mat-mini-fab.mat-primary {
     background-color: #ECBD00;
+    border-radius: 6px !important;
 }
+
+
+
 
 .table-header-background{
     background-color: #01671B;
@@ -49,4 +54,8 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
           padding-top: 4px;
         }
       }
+  }
+
+  .button{
+    border-radius:6px ;
   }
