--- a/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
+++ b/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
@@ -58,7 +58,7 @@
             <div class="kt-form__actions kt-form__actions--solid  py-4 border-t">
                 <div class="row text-right">
                     <div class="col-lg-12">
-                        <button type="button" class="button-red" mat-raised-button
+                        <button type="button" class="shadow-md btn bg-red-500 text-white rounded-md mx-2" mat-raised-button color="danger"
                                 [mat-dialog-close]="data.animal"
                                 cdkFocusInitial>
                             Cancel
