--- a/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
+++ b/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
@@ -111,7 +111,7 @@
           <div class="kt-form__actions kt-form__actions--solid">
             <div class="row text-right">
               <div class="col-lg-12">
-                <button type="button" class="button-red" mat-raised-button [mat-dialog-close]="data.animal"
+                <button type="button" class="shadow-md btn bg-red-500 text-white rounded-md mx-4"  color="danger" mat-raised-button [mat-dialog-close]="data.animal"
                         cdkFocusInitial>
                   Cancel
                 </button>&nbsp;
