--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -23,10 +23,10 @@
     <div class="">
 
         <!-- CONTENT GOES HERE -->
-        <div class="pt-1 mx-10 rounded p-2 shadow">
+        <div class="pt-1 mx-10 rounded p-2 shadow-lg bg-gray-50">
             <div class="form-group row" style=" 
             min-width: max-content;
-            max-height: 50vh;
+            max-height: 70vh;
             overflow-y:scroll;
         ">
                 <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  mat-elevation-z8"
