--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -6,7 +6,7 @@
 
   <!-- Header -->
   <div
-      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
       <!-- Loader -->
       <div
           class="absolute inset-x-0 bottom-0"
@@ -32,7 +32,7 @@
    <div class="">
     <!-- CONTENT GOES HERE -->
     <div class="pt-1">
-      <div class="form-group row" style="
+      <div class="form-group row mx-10" style="
       min-width: max-content;
       max-height: 50vh;
       overflow-y:scroll;
