--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -1,7 +1,7 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Deceased Customers</div>
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-2">Deceased Customers</div>
     <div class="kt-form kt-form-margin" [formGroup]="deceasedCustomerSearch">
-        <div class="row align-items-center mb-4">
+        <div class="row align-items-center mb-2">
 
 <!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
 <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">-->
@@ -135,7 +135,6 @@
           </div>
           </div> -->
         <div class="row align-items-center mb-4">
-            <div class="col-lg-10"></div>
             <div class="col-lg-2 col-md-3">
                 <button [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" type="button" class="btn btn-secondary mt-19 kt-login__btn-primary btn-block">
                     <span><i class="fa fa-search"> &nbsp;</i> Search</span>
@@ -164,7 +163,7 @@
         </div> -->
     </div>
     <!-- Search end -->
-    <div class="mat-table__wrapper mat-elevation-z8" [style.height]="gridHeight">
+    <div class="mat-table__wrapper" [style.height]="gridHeight">
 
         <mat-table class="lmat-elevation-z8"
                    #table
