--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -1,11 +1,11 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Customer Land Information</div>
     <button mat-raised-button color="primary" type="button" class="ml-2" (click)="ViewLandHistory()"
             *ngIf="isFormReadonly">View Land History
     </button>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8"
          style="flex-wrap: wrap" [formGroup]="LandInformationForm">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
@@ -169,7 +169,7 @@
         </div>
     </div>
 
-    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto mx-10" style="flex-direction: column;overflow-y: scroll">
         <div class="example-class-container">
             <table class="table table-striped">
                 <thead>
@@ -533,7 +533,7 @@
     </div>
 
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="LandingProcedureLov">
-        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <mat-form-field class="mat-form-field-fluid mx-10" appearance="outline">
             <mat-label class="customMatLabel">Remarks: <strong class="matMandatory"></strong></mat-label>
             <input [readonly]="isFormReadonly" matInput placeholder="Remarks" formControlName="Remarks" maxlength="200"
                    autocomplete="off"/>
