--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -1,7 +1,7 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Applying ORR</div>
+  <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Applying ORR</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b" [formGroup]="ORRForm">
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8" [formGroup]="ORRForm">
 
   <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
     <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
@@ -197,7 +197,7 @@
         </div>
      
 
-        <div class="form-group kt-form__group row">
+        <div class="form-group kt-form__group row mx-10">
           <div class="col-lg-6 kt-margin-bottom-20-mobile">
             <button mat-raised-button color="primary" (click)="save()" [disabled]="submitted">{{showFinalOrrTable?"Submit":"Save"}}</button>
             <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted">{{showFinalOrrTable?"Back":"Next"}}</button>
