--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -1,7 +1,7 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">API Logs</div>
+<div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight mt-4 px-2">API Logs</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
          style="flex-wrap: wrap" [formGroup]="FilterForm">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <mat-form-field appearance="outline">
