--- a/src/app/modules/report-managment/notification-history/notification-history.component.html
+++ b/src/app/modules/report-managment/notification-history/notification-history.component.html
@@ -1,7 +1,7 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">User History</div>
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-2">User History</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4  "
          style="flex-wrap: wrap" [formGroup]="FilterForm">
         <div
             class="absolute inset-x-0 bottom-0">
