--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -1,9 +1,9 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Set Target</div>
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-2">Set Target</div>
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
          [formGroup]="customerForm">
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
                 <mat-label>Select Duration</mat-label>
                 <mat-select #sel (selectionChange)="OnChange(sel.value)" formControlName="Duration">
