--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
         <!-- Loader -->
         <div
             class="absolute inset-x-0 bottom-0"
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Main -->
-    <div class="flex flex-auto overflow-hidden">
+    <div class="flex flex-auto overflow-y-scroll mx-10">
 
         <!-- Products list -->
         <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
