--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -1,7 +1,7 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b">
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
     <div class="text-4xl font-extrabold tracking-tight"> Create Fense</div>
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
       <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
@@ -13,7 +13,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+      <mat-form-field class="mat-form-field-fluid mx-4" appearance="outline" id="focus-removal">
         <mat-label>Branch</mat-label>
         <mat-select (selectionChange)="GetCircles($event)">
           <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
@@ -31,7 +31,7 @@
   </div>
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-scroll">
+  <div class="flex flex-auto overflow-y-scroll mx-10">
 
     <!-- Products list -->
     <div class="flex flex-auto " style="flex-direction: column;">
