--- a/src/app/modules/auth/confirmation-required/confirmation-required.component.html
+++ b/src/app/modules/auth/confirmation-required/confirmation-required.component.html
@@ -49,7 +49,7 @@
             <div class="text-7xl font-bold leading-none text-gray-100">
                 <div>Zarai Taraqiati Bank Limited</div>
             </div>
-            <div class="mt-6 text-lg tracking-tight leading-6 text-gray-400">
+            <div class="mt-6 text-lg tracking-tight leading-6 text-white">
                 Modern agriculture technology machinery and Agriculture loans in Pakistan.
             </div>
             <div class="flex items-center mt-8">
