--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0">
     <div
-        class="md:flex md:items-center md:justify-center w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
+        class="md:flex md:items-center md:justify-center w-full sm:w-auto md:h-full md:w-5/12 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
             <!-- Logo -->
-            <div class="w-12 mx-auto">
+            <div class="w-32 mx-auto">
                 <img src="assets/images/logo/logo.svg">
             </div>
 
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div
-        class="relative bg-image hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
+        class="relative bg-image hidden md:flex flex-auto items-center justify-center w-7/12 p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
         <!-- Background - @formatter:off -->
         <!-- Rings -->
         <!-- <svg class="absolute inset-0 pointer-events-none"
@@ -112,7 +112,7 @@
         </svg>
         <!-- @formatter:on -->
         <!-- Content -->
-        <div class="z-10 relative w-full max-w-2xl">
+        <div class="z-10 relative w-full max-w-2xl -mt-16">
             <div class="text-7xl font-bold leading-none text-gray-100">
                 <div>Zarai Taraqiati Bank Limited</div>
             </div>
