--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -177,7 +177,7 @@
         </div>
         
     </div>
-    <div class="col-lg-12">
+    <div class="col-lg-12 text-right py-4 border-t px-4">
 
         <button mat-raised-button class="mr-2" color="primary" (click)="SaveData()">Save</button>
         <button mat-raised-button class="mr-2" color="primary" (click)="SubmitData()">Submit</button>
