--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -4,6 +4,9 @@
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
     [formGroup]="loanutilizationSearch">
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+
+<!--    Start Dynamic ZBC From here-->
+<!--        zone-->
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
@@ -26,7 +29,7 @@
             </mat-form-field>
         </div>
 
-
+<!--Branch-->
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
@@ -48,21 +51,7 @@
             </mat-form-field>
         </div>
 
-
-<!--      <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">-->
-<!--        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-<!--          <mat-label>Circle No</mat-label>-->
-<!--          <mat-select formControlName="CircleId">-->
-<!--            <mat-option value="">-->
-<!--              Select-->
-<!--            </mat-option>-->
-<!--            <mat-option *ngFor="let obj of circle" [value]="obj.Id">-->
-<!--              {{obj.CircleCode}}-->
-<!--            </mat-option>-->
-<!--          </mat-select>-->
-<!--        </mat-form-field>-->
-<!--      </div>-->
-
+<!--Circle-->
 <!--                    <div  class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
 <!--                        {{selected_c}}-->
 <!--                        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
@@ -76,6 +65,8 @@
 <!--                        </mat-form-field>-->
 <!--                    </div>-->
 
+
+        <!--    End Dynamic ZBC From here-->
 
       <div class="col-md-2 kt-margin-bottom-10-mobile mr-20">
         <mat-form-field class="mat-form-field-fluid" appearance="outline">
