Pushed for dynamic ZBC

--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -23,7 +23,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-        </div>
+        </div>z
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
