--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -22,14 +22,16 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-      <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
-        <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
-        <span class="ml-2 mr-1">View Map </span>
-      </button>
-    </div>
+    
   </div>
-
+  <div class="row">
+  <div class="col-lg-12 text-right px-14">
+    <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
+      <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
+      <span class="ml-2 mr-1">View Map </span>
+    </button>
+  </div>
+</div>
   <!-- Main -->
   <div class="flex flex-auto overflow-y-scroll mx-10">
 
